compiler/toyc-ast-lowering/tests/snapshots/ast_lowering__main@extern.toy.snap
---
source: compiler/toyc-ast-lowering/tests/ast-lowering.rs
assertion_line: 13
expression: ctx.root()

---
Package {
    items: [
        Function(
            Function {
                id: HirId(
                    1,
                    PhantomData,
                    PhantomData,
                ),
                ident: answer @ 14..20,
                visibility: Inherited,
                self_kind: None,
                fn_type: FnType {
                    extern_: Yes(
                        C,
                    ),
                    unsafety: No,
                    constness: No,
                    generics: None,
                    inputs: [],
                    output: Explicit(
                        Type {
                            id: HirId(
                                2,
                                PhantomData,
                                PhantomData,
                            ),
                            kind: Primitive(
                                Int(
                                    Eight,
                                ),
                            ),
                            span: Span {
                                lo: 26,
                                hi: 28,
                            },
                        },
                    ),
                },
                body_id: Some(
                    BodyId(
                        HirId(
                            5,
                            PhantomData,
                            PhantomData,
                        ),
                    ),
                ),
                span: Span {
                    lo: 0,
                    hi: 36,
                },
            },
        ),
        Function(
            Function {
                id: HirId(
                    6,
                    PhantomData,
                    PhantomData,
                ),
                ident: ping @ 52..56,
                visibility: Inherited,
                self_kind: None,
                fn_type: FnType {
                    extern_: Yes(
                        C,
                    ),
                    unsafety: No,
                    constness: No,
                    generics: None,
                    inputs: [],
                    output: Explicit(
                        Type {
                            id: HirId(
                                7,
                                PhantomData,
                                PhantomData,
                            ),
                            kind: Primitive(
                                Uint(
                                    Size,
                                ),
                            ),
                            span: Span {
                                lo: 62,
                                hi: 67,
                            },
                        },
                    ),
                },
                body_id: Some(
                    BodyId(
                        HirId(
                            10,
                            PhantomData,
                            PhantomData,
                        ),
                    ),
                ),
                span: Span {
                    lo: 38,
                    hi: 79,
                },
            },
        ),
        Function(
            Function {
                id: HirId(
                    11,
                    PhantomData,
                    PhantomData,
                ),
                ident: pong @ 95..99,
                visibility: Inherited,
                self_kind: None,
                fn_type: FnType {
                    extern_: Yes(
                        C,
                    ),
                    unsafety: No,
                    constness: No,
                    generics: None,
                    inputs: [],
                    output: Explicit(
                        Type {
                            id: HirId(
                                12,
                                PhantomData,
                                PhantomData,
                            ),
                            kind: Primitive(
                                Uint(
                                    Size,
                                ),
                            ),
                            span: Span {
                                lo: 105,
                                hi: 110,
                            },
                        },
                    ),
                },
                body_id: None,
                span: Span {
                    lo: 81,
                    hi: 111,
                },
            },
        ),
    ],
    span: Span {
        lo: 0,
        hi: 111,
    },
}
