compiler/toyc-ast-lowering/tests/snapshots/ast_lowering__main@simple.toy.snap
---
source: compiler/toyc-ast-lowering/tests/ast-lowering.rs
assertion_line: 15
expression: pretty_hir

---

fn f(): {
}
